--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,10 @@
       <version>3.6.0</version>
     </dependency>
 
-
-
-
   </dependencies>
 
   <build>
+    <finalName>myname</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
